# py-bitchat

./: .gitignore  pyproject.toml  readme.md  run-python.py
src/: __init__.py  compression.py  encryption.py  fragmentation.py  main.py  persistence.py  terminal_ux.py
